Make sure fall back for loading custom widgets actually work (new File(url).toUrl() ---> double URL scheme)
[git-p4: depot-paths = "//depot/qtjambi/main/": change = 257614]